<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment">

        <ir.hosseinstar.motionlayoutexamples.DrawerContent
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/fragment_main_drawer_swipe">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/fra_main_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:elevation="4dp">

                    <ir.hosseinstar.motionlayoutexamples.CollapsibleToolbar
                        android:id="@+id/motion_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="4dp"
                        android:fitsSystemWindows="true"
                        android:minHeight="96dp"
                        app:layoutDescription="@xml/fragment_main_scene"
                        app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

                        <ImageView
                            android:id="@+id/fra_main_back"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:contentDescription="@string/hosseinstar"
                            android:rotationY="180"
                            android:scaleType="matrix"
                            android:src="@drawable/back"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/fra_main_menu"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:contentDescription="@string/hosseinstar"
                            android:padding="8dp"
                            android:rotationY="180"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_menu" />


                        <TextView
                            android:id="@+id/fra_main_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/hosseinstar"
                            android:textColor="#ededed"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/fra_main_menu"
                            app:layout_constraintStart_toEndOf="@+id/fra_main_menu"
                            app:layout_constraintTop_toTopOf="@+id/fra_main_menu" />

                        <TextView
                            android:id="@+id/main_page_H"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/h"
                            android:textColor="#ededed"
                            android:textSize="18sp"

                            />

                        <TextView
                            android:id="@+id/main_page_O"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/o"
                            android:textColor="#ededed"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/main_page_SS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ss"
                            android:textColor="#ededed"
                            android:textSize="18sp"

                            />

                        <TextView
                            android:id="@+id/main_page_E"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e"
                            android:textColor="#ededed"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/main_page_I"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i"
                            android:textColor="#ededed"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/main_page_N"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/n"
                            android:textColor="#ededed"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/main_page_star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/star"
                            android:textColor="#ededed"
                            android:textSize="18sp" />

                    </ir.hosseinstar.motionlayoutexamples.CollapsibleToolbar>
                </com.google.android.material.appbar.AppBarLayout>

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/fra_main_scrollable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:background="#fff"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/iran_sans"
                        android:text="@string/lorem"
                        android:textSize="20sp" />
                </androidx.core.widget.NestedScrollView>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </ir.hosseinstar.motionlayoutexamples.DrawerContent>

        <ir.hosseinstar.motionlayoutexamples.DrawerContent
            android:id="@+id/main_page_drawer_menu"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#2B134B"
            app:layoutDescription="@xml/fragment_main_drawer">

            <TextView
                android:id="@+id/main_page_drawer_menu_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Hossein_Star1999"
                android:textColor="#efefef"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="parent" />

            <View
                android:id="@+id/main_page_drawer_menu_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_page_drawer_menu_name" />

            <Button
                android:id="@+id/main_page_drawer_menu_first"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_black"
                android:drawablePadding="8dp"
                android:paddingVertical="8dp"
                android:text="First Item"
                android:textColor="#efefef" />

            <Button
                android:id="@+id/main_page_drawer_menu_second"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star"
                android:drawablePadding="8dp"
                android:paddingVertical="8dp"
                android:text="Second Item"
                android:textColor="#efefef" />

            <Button
                android:id="@+id/main_page_drawer_menu_third"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_black"
                android:drawablePadding="8dp"
                android:paddingVertical="8dp"
                android:text="Third Item"
                android:textColor="#efefef" />

            <Button
                android:id="@+id/main_page_drawer_menu_fourth"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_black"
                android:drawablePadding="8dp"
                android:paddingVertical="8dp"
                android:text="Fourth Item"
                android:textColor="#efefef" />

            <Button
                android:id="@+id/main_page_drawer_menu_fifth"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_black"
                android:drawablePadding="8dp"
                android:paddingVertical="8dp"
                android:text="Fifth Item"
                android:textColor="#efefef" />

            <Button
                android:id="@+id/main_page_drawer_menu_sixth"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_black"
                android:drawablePadding="8dp"
                android:paddingVertical="8dp"
                android:text="Sixth Item"
                android:textColor="#efefef" />

            <View
                android:id="@+id/main_page_drawer_menu_divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider" />

            <Button
                android:id="@+id/main_page_drawer_menu_setting"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_star_black"
                android:drawablePadding="8dp"
                android:paddingVertical="8dp"
                android:text="Setting"
                android:textColor="#efefef" />

        </ir.hosseinstar.motionlayoutexamples.DrawerContent>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>